fixed spacing on images and hid extra buttons

--- a/src/main.css
+++ b/src/main.css
@@ -2,6 +2,3 @@ main {
   display: flex;
   flex-wrap: wrap;
 }
-
-img{
-}
